test/fails/bad_generics/declare5.lgl
tag pos is vec<3>;
tag color is vec<3>;
tag tinted is color;

declare `t normalize<`t : vec>(`t x);

void main() {
    pos vert = [1., 2., 3.];
    vec2 fail = normal<vec2>(vert);  // Annoying, but true -- pretty much fine though tbh
}